<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.rahimpc.homepizza.AboutAsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_as"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/pizzabg"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_by"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:layout_weight="1"
        android:gravity="center"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:src="@drawable/img_rahim"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/arrow_left_bold_circle_outline"
            android:background="#000000"
            android:layout_margin="15dp"
            app:fabSize="auto"
            android:onClick="retour"
            />
    </RelativeLayout>
</LinearLayout>
